# sredoshahmaty

./: .pre-commit-config.yaml  README.md  doit.py  knowledge.md  pyproject.toml
.mypy_cache/3.12/: typing_extensions.data.json
.mypy_cache/3.12/zipfile/: __init__.meta.json  _path.data.json  _path.meta.json
templates/: announcement.md.j2  knowledge.md
