[tool.poetry]
name = "sredoshahmaty"
version = "0.1.0"
description = ""
authors = ["Vadim Evard <v.e.evard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
pendulum = "^3.0.0"
aiogram = "^3.13.1"
jinja2 = "^3.1.4"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "100"

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
line-length = 100
target-version = "py310"
